@@ -1,3 +1,9 @@
+2008-10-10  Sam Steingold  <sds@gnu.org>
+
+	* modules/syscalls/calls.c (get_file_size) [WIN32_NATIVE]: add
+	(FILE-SIZE) [WIN32_NATIVE]: use it instead of GetFileSizeEx
+	which takes a handle and not a pathname
+
 2008-10-08  Sam Steingold  <sds@gnu.org>
 
 	* modules/bindings/glibc/linux.lisp (strsignal, _NSIG): add;
